style: fixed nav bar logo alignment

--- a/frontend/src/components/Nav_Bar.css
+++ b/frontend/src/components/Nav_Bar.css
@@ -28,6 +28,7 @@
 
 .logo {
 
+    margin-top: 15px;
     width: 50px;
     height: 50px;
     object-fit: contain;
